--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dumbways day 1</title>
-    <link rel="icon" type="image/x-icon" href="Day 1/assets/programmer.jpg">
+    <link rel="icon" type="image/x-icon" href="Day 1/assets/programmer-icon.webp">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
    
     <style>
     body{
-        background-color: rgb(194, 187, 187);
+        background-color: lightgray;
     }
     .card{
-       margin: 50px ;
-       padding: 30px 150px;
+       margin: 50px 200px 50px 200px;
+       padding: 30px 300px;
        border: 1px solid rgb(240, 236, 236);
        background-color:  rgb(240, 236, 236);
         border-radius: 5px;
         font-family: Arial, Helvetica, sans-serif;
+       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         
     }
     .card p{
@@ -68,7 +69,7 @@
         text-align: center;
         border: 1px  rgb(240, 236, 236);
         background-color: white;
-        width: 300px;
+        width: 400px;
         margin: auto;
         border-radius: 10px;
         padding-bottom: 20px;
@@ -102,7 +103,7 @@
             <a href="https://twitter.com"><i class="fa-brands fa-twitter"></i></a>
         </div>
         <div class="card1">
-            <img src="/Day 1/assets/image.jpeg" alt="person" width="300px">
+            <img src="/Day 1/assets/image.jpeg" alt="person" width="400px">
             <p style="width:300px ;"><span>Khaerul Umam</span><br>Fullstack Developer</p>
         </div>
     </div>
